# protobuff

./: .gitignore  CMakeLists.txt  Messages.data  README.md  protoc  run.sh
protobuf-3.21.12/examples/: addressbook.pb.cc  addressbook_pb2.py
protobuf-3.21.12/examples/com/example/tutorial/protos/: AddressBook.java  AddressBookProtos.java  Person.java
protobuf-3.21.12/src/google/protobuf/util/internal/testdata/: books.pb.h
src/: CMakeLists.txt  main.cpp
src/proto_files/: wrappermessage.proto
src/protobuf_parser/: CMakeLists.txt  DelimitedMessagesStreamParser.cpp  DelimitedMessagesStreamParser.h  helpers.cpp  helpers.h  helpers.hpp  main.cpp
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
