protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ../protos/wrappermessage.proto)
add_library(Helpers helpers.h helpers.cpp ${PROTO_SRCS} ${PROTO_HDRS})
add_library(MessageParser DelimitedMessagesStreamParser.h DelimitedMessagesStreamParser.cpp)
target_link_libraries(MessageParser Helpers)
target_include_directories(Helpers PUBLIC "${PROJECT_BINARY_DIR}/protobuf_parser")
target_include_directories(MessageParser PUBLIC "${PROJECT_BINARY_DIR}/protobuf_parser")
